// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches snapshot with children 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card__subtitle"
    id=""
  >
    Subtitle content
  </div>
</DocumentFragment>
`;

exports[`Matches snapshot without children 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card__subtitle"
    id=""
  />
</DocumentFragment>
`;
